PROJECT(modm)

FILE(GLOB_RECURSE ASM_FILES *.sx)
SET_SOURCE_FILES_PROPERTIES(${ASM_FILES} PROPERTIES LANGUAGE CXX)

MACRO(GET_SOURCES OUTPUT SRC_DIR)
	FILE(GLOB_RECURSE ${OUTPUT} ${SRC_DIR}/*.c ${SRC_DIR}/*.cpp ${SRC_DIR}/*.h ${SRC_DIR}/*.hpp ${SRC_DIR}/*.sx)
ENDMACRO(GET_SOURCES)

GET_SOURCES(MODM_SRC modm/src)
GET_SOURCES(PRINTF_SRC modm/ext/printf/src)

ADD_LIBRARY(modm OBJECT ${MODM_SRC} ${PRINTF_SRC})

TARGET_INCLUDE_DIRECTORIES(modm
	PUBLIC
		modm/src
		modm/ext/cmsis/core
		modm/ext/cmsis/device
	PRIVATE
		modm/ext)

SET(MODM_INCLUDE
	${CMAKE_CURRENT_SOURCE_DIR}/modm/src
	${CMAKE_CURRENT_SOURCE_DIR}/modm/ext/cmsis/core
	${CMAKE_CURRENT_SOURCE_DIR}/modm/ext/cmsis/device
	${CMAKE_CURRENT_SOURCE_DIR}/modm/ext/crashcatcher/include
	${CMAKE_CURRENT_SOURCE_DIR}/modm/ext
PARENT_SCOPE)

EXPORT(TARGETS modm FILE modm.cmake)
